plang/testing/logs/false-incorrect/153/program153.p.p
sLXT (jJmL vCKae) :- (se ZJBYV); zUfL1 osxX (OX) z (sshW (twj (a Ky) (X2) (rtlb (dm) RJFg1 xzE Ci)) (qlE (W) (f2Dp (vF sR4 (lbPY (gjnop) Z TZ (L))) (UfkOi) (h U (C))) (vYbdn (J) (fL (y) (mhF kAeM (gnY (vA (E) (sU U (tVvqA) (T)) (rmO8 tIlGL (K) (g (CVIA0) dp X8HwP))) (EV)))))) f6 (ryy)), qvAVV j; dM2, t5S31 (VU).
mNgzl Ue qjKT (vMd MMt ia od (Cm)) :- vM Z72 G1Xdt (dX3WT Gf mmG k7dmW (bHOc)) (Tpv), (fIs (svYJ (Wj) (j1 (oF (Qk) UpshD))) F (gpFKS (AEl) i1NzT), rySe), buu0; xT08 NIwr QV (i CVH oiXF9), mTbSV oeU TH9 (b wg i (aolxo FSR (s) (yn8oc (d5 (m837 xKS Wa4 P0MpB (j (xrL AKX8) (KZOIC) yPGci (w5 (rBsm (DQBDb) je) U))) dryC YZHo) J (p EFZ)))) (UJo), cow Pk f; q MkDBv (AJ) (APN0); sZI (Aevh) (xur (T) R (LmK04)) F8eC Rgcv, ((bxG, q (rqiA (GGb) ExKz6 (h)) (m (g5If De) (CUyYT)) (dCu hHY T3wea) w9)).
yY LFe (KxOC6) (TF) (vj3) :- ((zQWUq (E) uA74 (r7cwG qAsHS D b (r3GGr)) P, j; (epW mbS (PFb) qxc))), (lGzk Jj0Ep (DMUU); (gt xnAK)).

? (dZKFK (Csd) (I) (K); ftW), t hDPgm (LAwQ) (VcFMo) (da (cqy) gTSH M (q7 (b4VmZ (h T6lZ) rxY8K))), jOy, oO; oRk vEel (h1 (vckR (SAA) (PDx))) (knUQ8) (bQF6), k5q I6; (zrpu q (MxBN)); bY A FIn, i (Hs3); (r00 (FvSh) (b (g3YgR sinq (wE6X (Aa) (wRefZ qY (aVRp8 k73Tj hJ))) nPp (lFDx))) a (A7vM)), (sq (stUMb (JDSOx) (FQjrB) jZ) (S) (stGzi (la3 (xmvOm) (kRGEh)) rCn)).
